src/App.css
.App-container {
    margin: 0px;
    padding: 0px;
    position: absolute;
    width: 100%;
    height: 100%;
    background-color: white;
}

.App-container .ticks {
  font-size: 10px;
}

.App-container
.track,
.track-inset,
.track-overlay {
    stroke-linecap: round;
}

.slider-svg {
    margin: 0px;
    padding: 0px;
    position: relative;
    min-height: 100px;
    max-height: 150px;
}

.App-container .label {
    font-size: 15px;
}

.App-container .track {
    stroke: #000;
    stroke-opacity: 0.3;
    stroke-width: 10px;
}

.App-container .track-inset {
    stroke: #dcdcdc;
    stroke-width: 8px;
}

.App-container .track-overlay {
    pointer-events: stroke;
    stroke-width: 50px;
    stroke: transparent;
    cursor: crosshair;
}

.App-container .handle {
    fill: #fff;
    stroke: #000;
    stroke-opacity: 0.5;
    stroke-width: 1.25px;
}

#play-button {
    background: #f08080;
    border-radius: 3px;
    border: none;
    color: white;
    cursor: pointer;
    width: 60px;
    height: 30px;
}

#play-button:hover {
    background-color: #696969;
}

